--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,6 @@
 @media  (min-width:376px){
 body{
-  background-color: hsla(0, 0%, 100%, 0.75);
+  background-color: hsl(0, 0%, 95%);
 }
 .q::after{
   content: '';
