--- a/css/css.css
+++ b/css/css.css
@@ -51,6 +51,11 @@ left: 549px;
   font-family: 'Lexend Deca';
   font-size: 15px;
   letter-spacing: 0.3px;
+  BACKGROUND-COLOR: white;
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .t:hover{
   color: white;
@@ -105,6 +110,11 @@ left: 549px;
   font-family: 'Lexend Deca';
   font-size: 15px;
   letter-spacing: 0.3px;
+  BACKGROUND-COLOR: white;
+  z-index: 99;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .p:hover{
   color: white;
@@ -150,17 +160,22 @@ left: 549px;
   line-height: 24.5px;
 }
 .g{
-  border-radius: 25px;
-  color: hsl(179, 100%, 13%);
-  border: none;
-  position: absolute;
-  left: 1162px;
-  top: 574px;
-  height: 48px;
-  width: 144px;
-  font-family: 'Lexend Deca';
-  font-size: 15px;
-  letter-spacing: 0.3px;
+    border-radius: 25px;
+    border: none;
+    position: absolute;
+    left: 1162px;
+    top: 574px;
+    height: 48px;
+    BACKGROUND-COLOR: white;
+    color: hsl(179, 100%, 13%);
+    width: 144px;
+    font-family: 'Lexend Deca';
+    font-size: 15px;
+    letter-spacing: 0.3px;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .g:hover{
   color: white;
